; ModuleID = '/home/carl/AnghaBench/php-src/ext/soap/extr_php_sdl.c_make_persistent_restriction_int.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/soap/extr_php_sdl.c_make_persistent_restriction_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @make_persistent_restriction_int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @make_persistent_restriction_int(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32**, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to i32**
  store i32** %6, i32*** %3, align 8
  store i32* null, i32** %4, align 8
  %7 = call i32* @malloc(i32 4)
  store i32* %7, i32** %4, align 8
  %8 = load i32**, i32*** %3, align 8
  %9 = load i32*, i32** %8, align 8
  %10 = load i32, i32* %9, align 4
  %11 = load i32*, i32** %4, align 8
  store i32 %10, i32* %11, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = load i32**, i32*** %3, align 8
  store i32* %12, i32** %13, align 8
  ret void
}

declare dso_local i32* @malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
